# rust_news

./: .env  Cargo.toml
migrations/2020-07-14-125233_create_posts/: up.sql
src/: lib.rs  schema.rs
test/: meteo.json
