[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Joël Schaerer <joel.schaerer@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
diesel = { version = "*", features = ["sqlite"] }
dotenv = "*"
